# AP-Project

./: .gitignore  README.md
mainController/: main.py
pacManForked/build-pacMan-Desktop_Qt_5_11_0_GCC_64bit-Debug/: Makefile  moc_menu.cpp  moc_options.cpp  moc_pacmanwindow.cpp  pacMan  qrc_Images.cpp  qrc_Sounds.cpp  ui_menu.h  ui_options.h  ui_pacmanwindow.h
pacManForked/build-pacManFromMehdi-Desktop_Qt_5_11_0_GCC_64bit-Debug/: Makefile  moc_menu.cpp  moc_options.cpp  moc_pacmanwindow.cpp  qrc_Images.cpp  qrc_Resources.cpp  qrc_Sounds.cpp  ui_pacmanwindow.h
pacManForked/buildDirectory/: Makefile  qrc_Images.cpp  qrc_Sounds.cpp  ui_pacmanwindow.h
pacManForked/pacMan/: CMakeLists.txt  Images.qrc  ball.cpp  ball.h  ghost.cpp  ghost.h  main.cpp  menu.cpp  menu.h  menu.ui  options.cpp  options.h  options.ui  pacMan.pro  pacMan.pro.user.693eabf  pacManFromMehdi.pro  pacman.cpp  pacman.h  pacmanboard.cpp  pacmanboard.h  pacmanwindow.cpp  pacmanwindow.h  pacmanwindow.ui  player.h.autosave  powerball.cpp  powerball.h  textdrawing.cpp  textdrawing.h
speechRecognition/: speechRecognition.py
speechRecognition/OLD/: commands  down.pkl  down1.pkl  left.pkl  left1.pkl  microphone_recognition.py  right.pkl  right1.pkl  up.pkl  up1.pkl
speechRecognition/trainTheNetwork/: .swp  train.py
